feat: more mappers & 8x16 sprite support

--- a/web/index.html
+++ b/web/index.html
@@ -60,6 +60,15 @@
                 Supported mappers:
                 <a href="https://nesdir.github.io/mapper0.html" class="text-hl"
                   >NROM</a
+                >,
+                <a href="https://nesdir.github.io/mapper1.html" class="text-hl"
+                  >SXROM</a
+                >,
+                <a href="https://nesdir.github.io/mapper2.html" class="text-hl"
+                  >UXROM</a
+                >,
+                <a href="https://nesdir.github.io/mapper3.html" class="text-hl"
+                  >CNROM</a
                 >.
               </li>
               <li>Implements some of the original hardware bugs and quirks.</li>
