--- a/web/index.html
+++ b/web/index.html
@@ -18,13 +18,13 @@
   </head>
 
   <body
-    class="w-full md:min-h-screen md:max-h-screen flex flex-col md:flex-row text-secondary"
+    class="flex w-full flex-col text-secondary md:max-h-screen md:min-h-screen md:flex-row"
   >
-    <div class="pb-6 md:w-1/2 md:min-h-screen md:max-h-screen overflow-scroll">
-      <div class="w-full py-4 px-6 flex items-center justify-between">
+    <div class="overflow-scroll pb-6 md:max-h-screen md:min-h-screen md:w-1/2">
+      <div class="flex w-full items-center justify-between px-6 py-4">
         <div class="flex items-center space-x-1">
           <img src="src/assets/gamepad.svg" width="25" alt="icon" />
-          <h1 class="font-semibold text-xl">
+          <h1 class="text-xl font-semibold">
             <span class="text-secondary">Mes</span
             ><span class="text-primary">emu</span>
           </h1>
@@ -34,7 +34,7 @@
         </a>
       </div>
       <div class="p-5">
-        <div class="py-8 space-y-6 flex flex-col items-center">
+        <div class="flex flex-col items-center space-y-6 py-8">
           <img src="src/assets/nes-controller.svg" alt="NES" width="40%" />
           <div class="text-center">
             A decent <span class="text-hl">NES</span> emulator written in
@@ -44,11 +44,11 @@
         </div>
         <div class="space-y-6">
           <div class="space-y-2">
-            <div class="space-x-2 flex items-center">
+            <div class="flex items-center space-x-2">
               <img src="src/assets/sparkle.svg" alt="sparkle" width="20" />
               <h2 class="text-xl font-semibold">Features</h2>
             </div>
-            <ul class="ml-6 space-y-2 list-disc">
+            <ul class="ml-6 list-disc space-y-2">
               <li>
                 Supports
                 <a href="https://www.nesdev.org/wiki/INES" class="text-hl"
@@ -76,11 +76,11 @@
             </ul>
           </div>
           <div class="space-y-2">
-            <div class="space-x-2 flex items-center">
+            <div class="flex items-center space-x-2">
               <img src="src/assets/keyboard.svg" alt="sparkle" width="20" />
               <h2 class="text-xl font-semibold">Controls</h2>
             </div>
-            <ul class="ml-6 space-y-2 list-disc">
+            <ul class="ml-6 list-disc space-y-2">
               <li>
                 <span class="mr-2">Directions: </span>
                 <span class="space-x-2">
@@ -114,21 +114,21 @@
       </div>
     </div>
     <div
-      class="md:w-1/2 md:h-screen py-10 px-4 flex justify-center items-center bg-smoke"
+      class="flex items-center justify-center bg-smoke px-4 py-10 md:h-screen md:w-1/2"
     >
-      <div class="p-4 rounded-md border-[1px] border-smoke bg-white">
-        <div id="canvas-container" class="w-full h-full flex flex-col hidden">
+      <div class="rounded-md border-[1px] border-smoke bg-white p-4">
+        <div id="canvas-container" class="hidden h-full w-full flex-col">
           <canvas
             id="canvas"
             class="w-[512px] max-w-full rounded-md [image-rendering:pixelated]"
             width="256"
             height="240"
           ></canvas>
-          <div class="pt-4 flex items-center justify-between">
+          <div class="flex items-center justify-between pt-4">
             <div>
               <button
                 id="button-stop"
-                class="space-x-1 py-2 px-4 flex items-center rounded-md bg-secondary"
+                class="flex items-center space-x-1 rounded-md bg-secondary px-4 py-2"
               >
                 <img src="src/assets/stop.svg" alt="stop" width="20" />
                 <span class="mr-1 font-semibold text-white">Stop</span>
@@ -137,7 +137,7 @@
             <div>
               <button
                 id="button-fullscreen"
-                class="p-2 rounded-md bg-secondary"
+                class="rounded-md bg-secondary p-2"
               >
                 <img
                   src="src/assets/fullscreen.svg"
@@ -148,40 +148,40 @@
             </div>
           </div>
           <div class="md:hidden">
-            <div class="pt-6 pb-3 flex justify-between items-center">
+            <div class="flex items-center justify-between pb-3 pt-6">
               <div class="grid grid-cols-3 gap-1">
                 <div></div>
-                <div id="key-up" class="py-3 px-2 arrow-key">
+                <div value="00001000" class="arrow-key button px-2 py-3">
                   <img src="src/assets/arrow-up.svg" alt="↑" width="14" />
                 </div>
                 <div></div>
-                <div id="key-left" class="py-3 px-3 arrow-key">
+                <div value="00000010" class="arrow-key button px-3 py-3">
                   <img src="src/assets/arrow-left.svg" alt="←" width="14" />
                 </div>
                 <div></div>
-                <div id="key-right" class="py-3 px-3 arrow-key">
+                <div value="00000001" class="arrow-key button px-3 py-3">
                   <img src="src/assets/arrow-right.svg" alt="→" width="14" />
                 </div>
                 <div></div>
-                <div id="key-down" class="py-3 px-2 arrow-key">
+                <div value="00000100" class="arrow-key button px-2 py-3">
                   <img src="src/assets/arrow-down.svg" alt="↓" width="14" />
                 </div>
                 <div></div>
               </div>
               <div class="flex space-x-3">
-                <div id="key-select" class="menu-key"></div>
-                <div id="key-start" class="menu-key"></div>
+                <div value="00100000" class="menu-key button"></div>
+                <div value="00010000" class="menu-key button"></div>
               </div>
               <div class="flex space-x-3">
-                <div id="key-b" class="action-key">B</div>
-                <div id="key-a" class="action-key">A</div>
+                <div value="01000000" class="action-key button">B</div>
+                <div value="10000000" class="action-key button">A</div>
               </div>
             </div>
           </div>
         </div>
         <div
           id="drag-drop-area"
-          class="py-12 px-16 space-y-4 flex flex-col items-center justify-center rounded-sm border-2 border-primary border-dashed text-center"
+          class="flex flex-col items-center justify-center space-y-4 rounded-sm border-2 border-dashed border-primary px-16 py-12 text-center"
         >
           <img src="src/assets/drag-drop.svg" alt="file" width="100" />
           <div>
@@ -190,28 +190,13 @@
           <div>OR</div>
           <label
             for="input-rom"
-            class="space-x-1 py-2 px-4 flex items-center rounded-md text-white bg-primary cursor-pointer"
+            class="flex cursor-pointer items-center space-x-1 rounded-md bg-primary px-4 py-2 text-white"
           >
             <span>Upload</span>
             <img src="src/assets/upload.svg" alt="icon" width="16" />
           </label>
           <input type="file" id="input-rom" class="hidden" />
         </div>
-      </div>
-    </div>
-    <div
-      id="popup-container"
-      class="p-4 w-screen h-screen fixed flex items-center justify-center hidden bg-smoke"
-    >
-      <div
-        class="min-w-[300px] max-w-[400px] relative py-6 px-8 flex flex-col items-center rounded-md border-[1px] border-smoke bg-white"
-      >
-        <img src="src/assets/error.svg" alt="error" width="50" class="mb-2" />
-        <div class="mb-4 font-semibold text-xl text-primary">Error</div>
-        <div id="error-message" class="mb-6 text-center"></div>
-        <button class="py-2 px-5 rounded-md text-white bg-primary">
-          Close
-        </button>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
