--- a/web/index.html
+++ b/web/index.html
@@ -71,6 +71,7 @@
                   >CNROM</a
                 >.
               </li>
+              <li>Fairly decent audio quality.</li>
               <li>Implements some of the original hardware bugs and quirks.</li>
               <li>Mobile device controls.</li>
             </ul>
